--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,10 @@ body {
   margin: 0;
 }
 
+body * {
+  transition: 0.4s;
+}
+
 h1,
 h2,
 h3,
@@ -25,7 +29,7 @@ h5,
 h6,
 strong {
   color: var(--mainText);
-  font-family: 'Russo One', sans-serif;
+  font-family: 'Bree Serif', serif;
   font-weight: 400;
 }
 
@@ -36,7 +40,7 @@ label,
 input,
 textarea {
   color: var(--secondaryText);
-  font-family: 'Roboto Mono', monospace;
+  font-family: 'Recursive', sans-serif;
 }
 
 a {
